Fix resize add-item input on small screens

--- a/local-storage/styles.css
+++ b/local-storage/styles.css
@@ -182,3 +182,21 @@ html {
     display: none;
   }
 } */
+
+@media (max-width: 460px) {
+  .add-items {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .plates {
+    margin-bottom: 8px;
+  }
+
+  .item-input {
+    min-width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+    margin-bottom: 4px;
+  }
+}
